--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,9 @@
 {
-    "name": "ROS2 Dev Env",
-    "dockerComposeFile": "docker-compose.yml",
+"name": "ROS2 Dev Env",
+    "dockerComposeFile": [
+        "docker-compose.yml",
+        "docker-compose.override.yml"
+    ],
     "service": "ros2-dev",
     "workspaceFolder": "/home/rosdev/ros_ws",
     "initializeCommand": ".devcontainer/host-setup.sh",
