--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,6 @@ on:
     paths:
       - '.devcontainer/**'
       - 'Dockerfile'
-      - 'scripts/**'
       - 'packages.repos'
       - '.github/workflows/**'
   
@@ -23,13 +22,8 @@ jobs:
       
       - name: Set up CI environment
         run: |
-          # Make host-setup.sh executable
           chmod +x .devcontainer/host-setup.sh
-          
-          # Export CI variable to ensure correct environment detection
           export CI=true
-          
-          # initializeCommand runs automatically
         
       - name: Build and test devcontainer
         uses: devcontainers/ci@v0.3
@@ -45,29 +39,35 @@ jobs:
             echo "========================================="
             
             # Check ROS installation
-            echo -e "\n[1/4] Checking ROS installation..."
+            echo -e "\n[1/5] Checking ROS installation..."
             source /opt/ros/${ROS_DISTRO}/setup.bash
             ros2 --version
             
             # Check workspace structure
-            echo -e "\n[2/4] Checking workspace structure..."
+            echo -e "\n[2/5] Checking workspace structure..."
             ls -la /home/rosdev/ros_ws/
             
-            # Check scripts are executable
-            echo -e "\n[3/4] Checking scripts..."
+            # Check scripts exist
+            echo -e "\n[3/5] Checking scripts..."
             ls -la /home/rosdev/ros_ws/scripts/
+            ls -la /home/rosdev/ros_ws/scripts/core/
             
             # Test environment configuration
-            echo -e "\n[4/4] Testing environment setup..."
-            source /home/rosdev/ros_ws/scripts/config.sh
+            echo -e "\n[4/5] Testing environment..."
+            source /home/rosdev/ros_ws/scripts/core/config.sh
             echo "ROS_DISTRO: $ROS_DISTRO"
-            echo "WS_ROOT: $WS_ROOT"
+            echo "WORKSPACE_ROOT: $WORKSPACE_ROOT"
             echo "ROS_DOMAIN_ID: $ROS_DOMAIN_ID"
             
-            # Verify no X11 mounts in CI (they should not exist)
-            echo -e "\nVerifying CI configuration..."
+            # Verify no X11 in CI
+            echo -e "\n[5/5] Verifying CI configuration..."
             if [ -f /home/rosdev/.Xauthority ]; then
               echo "ERROR: .Xauthority should not exist in CI"
+              exit 1
+            fi
+            
+            if [ -d /tmp/.X11-unix ]; then
+              echo "ERROR: X11 socket should not exist in CI"
               exit 1
             fi
             
