--- a/.devcontainer/config/defaults.env
+++ b/.devcontainer/config/defaults.env
@@ -15,7 +15,7 @@ BASE_IMAGE=ghcr.io/sloretz/ros
 # Build
 BUILD_TYPE=Release
 COLCON_BASE_ARGS=--symlink-install
-CMAKE_BASE_ARGS=-DCMAKE_BUILD_TYPE=${BUILD_TYPE}
+CMAKE_BASE_ARGS="-DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DCMAKE_EXPORT_COMPILE_COMMANDS=ON"
 
 # Derived paths (from user config)
 HOME_DIR=/home/${DEV_USER}
