Adding support for Foxglove Studio

--- a/.devcontainer/config/defaults.env
+++ b/.devcontainer/config/defaults.env
@@ -36,3 +36,7 @@ WORKSPACE_SUBDIRS="src/thirdparty_packages,src/host_packages,bags,scripts,log"
 # Logging
 RCUTILS_LOGGING_BUFFERED_STREAM=1
 RCUTILS_LOGGING_USE_STDOUT=1
+
+# Foxglove
+FOXGLOVE_PORT=8765
+FOXGLOVE_ADDRESS=0.0.0.0
